# sandbox

./: Building Custom Agents v3.ipynb  Building_Custom_Tools.ipynb  Building_Custom_Tools_v2.ipynb  README.md  Testing JSON_v2.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled4.ipynb  pyproject.toml
.ipynb_checkpoints/: Building A Travel Agent-checkpoint.ipynb  Testing JSON-checkpoint.ipynb  Untitled1-checkpoint.ipynb
app/: chain.py  server.py
